adding git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@
 
 # dependencies
 /client/node_modules
-/client/.pnp
-/client.pnp.js
+/.pnp
+.pnp.js
 
 # testing
-/client/coverage
+/coverage
 
 # production
-/client/build
+/build
 
 # misc
 .DS_Store
